# tg-sync-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt
DTOs/: repo_dtos.py
core/: mapper.py  recognizer.py  sync_worker.py
exceptions/: repositories.py
infrastructures/mappers/: mem_mapper.py
infrastructures/repositories/: aiogram.py  mem_truth_repo.py
interfaces/: mapper.py  tg_repository.py  truth_repository.py
tests/: test_aiogram_repo.py  test_mem_mapper_db.py
tests/core/: test_recognizer.py  test_sync_engine.py  test_sync_worker.py
tg_sync_chat/core/: recognizer.py  sync_engine.py
tg_sync_chat/tests/: test_mem_truth_repo.py
tg_sync_chat/tests/core/: test_mapper.py
